---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,1,0,1,true
2,1,0,1,false
Stderr:
failed to process `TransactionInfo { kind: Withdrawal, client_id: ClientId(1), tx_id: TransactionId(6), amount: Some(0.5) }`: account is frozen
failed to process `TransactionInfo { kind: Deposit, client_id: ClientId(1), tx_id: TransactionId(7), amount: Some(0.1) }`: account is frozen
failed to process `TransactionInfo { kind: Dispute, client_id: ClientId(1), tx_id: TransactionId(7), amount: None }`: account is frozen
failed to process `TransactionInfo { kind: Resolve, client_id: ClientId(1), tx_id: TransactionId(7), amount: None }`: account is frozen

